added csv bolt and tests